# hpc-edit-distance

./: .gitignore  CMakeLists.txt  Makefile  README.md  avx2_edit_distance.c  main.c  naive_edit_distance.c  parallelized_edit_distance.c  tiled_edit_distance.c
src/: avx2_edit_distance.h  naive_edit_distance.h  parallelized_edit_distance.h  threadarguments.h  tiled_edit_distance.h
unused/: test_edit_distance.c
